--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,8 +1,8 @@
 body {
-    color: blue;
+    color: rgb(127, 37, 82);
     text-align: center;
-    font-family: "Arial";
-    font-size: 16px;
+    font-family: "Currier";
+    font-size: 18px;
     margin: 0;
     padding: 0;
 }
@@ -11,7 +11,7 @@ body {
     width: 70%;
     padding: 1em;
     text-align: left;
-    border: 1px solid #DDD;
+    border: 1px solid #751c1c;
     margin: 0 auto;
 }
 
