--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,5 @@
 body {
-    color: #333;
+    color: #db1c1c;
     text-align: center;
     font-family: Arial;
     font-size: 16px;
@@ -8,7 +8,7 @@ body {
 }
 
 #cabecera {
-    background: #33A;
+    background: rgb(22, 22, 234);
     box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
     color: white;
     font-weight: bold;
